# youtube_dictation

./: Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
app/: forms.py  models.py  views.py
app/migrations/: 0001_initial.py
app/static/js/: script.js
app/templates/: base.html  check.html  frontpage.html  index.html
app/templates/question/: question.html
config/: settings.py  urls.py
notebooks/: create_question.ipynb  youtube_api_test.ipynb
