[tool.poetry]
name = "youtube-dictation"
version = "0.1.0"
description = ""
authors = ["aikawa"]
readme = "README.md"
packages = [{include = "youtube_dictation"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
